--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
-    "mysql2": "^3.9.1"
+    "mysql2": "^3.9.1",
+    "sequelize": "^6.37.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
